fix(WidescreenMode): Fixed scrollbar

--- a/src/style/widescreenMode.less
+++ b/src/style/widescreenMode.less
@@ -447,6 +447,10 @@ body[class] {
         border-radius: 0;
         right: 0;
 
+        &:before {
+          background: #2a2e31;
+        }
+
         &.visible {
           opacity: 1;
         }
